# learning-packer

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  analysis.py  build.py  decode.c  loader.c  rbuild.py  requirements.txt  setup.cfg
builder/: cctarget.py  exceptions.py
packer1/: build.py  example.c  loader.c
packer2/: build.py  loader.c
packer3/: build.py  loader.c
packer4/: build.py  compression_packer.c  compression_packer.h  loader.c
packer5/: build.py  example.c  loader.c  png_decode.c  png_decode.h  rsrc.rc  utils.py
packer6/: anti_debug.c  anti_debug.h  assembly_utils.asm  assembly_utils.c  assembly_utils.h  assembly_utils.s  build.py  loader.c
packer7/: build.py  junkcode.h  load_pe.c  load_pe.h  loader.c
packer8/: README.md  build.py  loader.c
packer8/obfuscator/: .clang-format  CMakeLists.txt  bcf.cpp
packer9/: packer.py  rsrc.rc  verify.py
